<?xml version="1.0" encoding="utf-8"?>
<joaogd53.com.br.customViews.StoryCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/storyCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:elevation="30dp"
    android:layout_marginBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgCard"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/contentImgCard" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCard"
            android:layout_marginTop="16dp"
            android:text="@string/title_card"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtDummy"
            android:textAlignment="center"
            android:textSize="14dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtSignature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtText"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtDummySignature"
            android:textAlignment="center"
            android:textSize="12dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSignature"
            android:background="@color/colorSecondary">

            <Button
                android:id="@+id/btnComment"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/colorSecondary"
                android:drawableStart="@drawable/ic_comment"
                android:text="@string/comment"
                android:textColor="@color/bgTitleRight"
                android:textSize="12dp" />
        </LinearLayout>
    </RelativeLayout>

</joaogd53.com.br.customViews.StoryCardView>