<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/buyQuota"
        android:textAlignment="center"
        android:textColor="@color/bgTitleRight"
        android:textSize="32dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="italic"
        android:text="@string/bank_info"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/quota_date"
            android:textSize="20dp" />

        <joaogd53.com.br.customViews.DatePickerEditText
            android:id="@+id/txtDatePicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="none"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/quota_value"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtQuotaVlr"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal" />
    </LinearLayout>
</LinearLayout>