<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_fragment_width"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:id="@+id/header_layout"
        android:background="@color/bgTitleRight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleComment"
            android:layout_width="@dimen/dialog_fragment_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/comment"
            android:textAlignment="center"
            android:textColor="@color/bgTitleRight"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/commentListView"
            android:layout_width="@dimen/dialog_fragment_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitleComment"
            android:background="@color/bgTitleRight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dialog_fragment_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:background="@color/bgTitleRight"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtComment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/write_comment_edit_view_style"
            android:hint="@string/write_comment"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_send"
            android:text="@string/send"
            android:textColor="@color/cardview_light_background"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>