<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/iniCard"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCard"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/img_card" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/imgCard"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textStyle="italic"
                android:text="@string/txtInit" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <joaogd53.com.br.customViews.DirectionView
        android:id="@+id/dview_init"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/iniCard"
        android:background="@color/bgTitleRight"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/iniCard">

        <ImageView
            android:id="@+id/imgDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_place_marker" />

        <TextView
            android:id="@+id/txtChurchAddress"
            android:layout_toRightOf="@+id/imgDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/churchName"
            android:textColor="@color/mainTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/churchAddress"
            android:layout_toRightOf="@+id/imgDirection"
            android:layout_below="@+id/txtChurchAddress"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:layout_marginStart="16dp"/>

    </joaogd53.com.br.customViews.DirectionView>
</RelativeLayout>