<?xml version="1.0" encoding="utf-8"?>
<joaogd53.com.br.customViews.CountDownView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/countDownView"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:background="#BC8F8F"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#BC8F8F"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTimerDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txt_TimerDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#BC8F8F"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTimerHour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txt_TimerHour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#BC8F8F"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTimerMinute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txt_TimerMinute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#BC8F8F"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTimerSecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txt_TimerSecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seconds"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />
    </LinearLayout>
</joaogd53.com.br.customViews.CountDownView>