<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <!-- LEFT TITLE PART -->
    <RelativeLayout
        android:id="@+id/left_title_part"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="3"
        android:background="@color/bgTitleLeft"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imgSmall"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/contentImgCard"
            android:textSize="26dp" />

        <!--<ImageView-->
        <!--android:id="@+id/expanded_image"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@drawable/ic_image"-->
        <!--android:visibility="invisible" />-->
    </RelativeLayout>
    <!-- RIGHT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bgTitleRight"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/title_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/user_name_ad"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/title_text_2"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/title_image_1"
                android:contentDescription="@string/contentImgCard"
                android:src="@drawable/ic_confirm_green"
                android:layout_marginTop="5dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/title_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/confirmed"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>